[gd_scene load_steps=19 format=3 uid="uid://cbyyvvyat86w5"]

[ext_resource type="Script" uid="uid://do5yjhvppau6t" path="res://Scripts/player.gd" id="1_7xlu7"]
[ext_resource type="Texture2D" uid="uid://bxyxxuysg3ri2" path="res://Sprites/AstronautSheet.png" id="2_3smsa"]
[ext_resource type="Script" uid="uid://cfxdxycv7rpmv" path="res://Scripts/Components/move_component.gd" id="3_b54qv"]
[ext_resource type="Script" uid="uid://cmiitbetg13xm" path="res://Scripts/Components/inventory_component.gd" id="4_5e7ua"]
[ext_resource type="Script" uid="uid://pbi6w6th1xe2" path="res://Scripts/Components/health_component.gd" id="4_h70ni"]
[ext_resource type="Script" uid="uid://b0ktayxvopgxn" path="res://Scripts/shipControls.gd" id="6_3smsa"]
[ext_resource type="Script" uid="uid://bhwuhvjxhnbhw" path="res://Scripts/Components/move_animation_component.gd" id="6_h7mq5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("2_3smsa")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("2_3smsa")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("2_3smsa")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("2_3smsa")
region = Rect2(16, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_lv2kl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}],
"loop": true,
"name": &"Back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}],
"loop": true,
"name": &"Front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}],
"loop": true,
"name": &"Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}],
"loop": true,
"name": &"Right",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ge1wx"]
radius = 6.0

[sub_resource type="Animation" id="Animation_gcls2"]
resource_name = "Front"
length = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_aj8j8"]
resource_name = "Left"
length = 0.25
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.125, 0, 0.125, 0, -0.0523599, -0.125, 0, 0.125, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="Animation" id="Animation_v3i27"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_h72rl"]
resource_name = "Right"
length = 0.25
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.125, 0, 0.125, 0, 0.0523599, -0.125, 0, 0.125, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jl73l"]
_data = {
&"Front": SubResource("Animation_gcls2"),
&"Left": SubResource("Animation_aj8j8"),
&"RESET": SubResource("Animation_v3i27"),
&"Right": SubResource("Animation_h72rl")
}

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_7xlu7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 0.396759)
sprite_frames = SubResource("SpriteFrames_lv2kl")
animation = &"Right"
autoplay = "Front"

[node name="RotationPivot" type="Node2D" parent="."]
position = Vector2(0, 4)

[node name="Hand" type="Node2D" parent="RotationPivot"]
position = Vector2(13, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_ge1wx")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("3_b54qv")
actor = NodePath("..")

[node name="InventoryComponent" type="Node" parent="."]
script = ExtResource("4_5e7ua")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_h70ni")

[node name="ShipControlComponent" type="Node" parent="."]
process_mode = 4
script = ExtResource("6_3smsa")

[node name="MoveAnimationComponent" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jl73l")
}
script = ExtResource("6_h7mq5")

[connection signal="animation_changed" from="MoveAnimationComponent" to="MoveAnimationComponent" method="_on_animation_changed"]
